--- a/roles/common/templates/tell_my_ip.sh.j2
+++ b/roles/common/templates/tell_my_ip.sh.j2
@@ -13,6 +13,7 @@ echo hostname[$hn] iip[$iip] dns_ip[$dns_ip]
 if [ "$iip" != "$dns_ip" ]; then
     echo "IPs dont match"
     curl --silent --max-time 10 \
+        --insecure \
         --data "dns_api_key=$dns_api_key&ip=$iip&host=$hn" \
         {{dns_api_url}}
 fi
