Added multiple ips

--- a/roles/common/templates/tell_my_ip.sh.j2
+++ b/roles/common/templates/tell_my_ip.sh.j2
@@ -1,5 +1,16 @@
 #!/bin/bash
 
+process_ip () {
+    host_name="$1"
+    ip_addr="$2"
+    interface="$3"
+
+    echo "$host_name"
+    echo "$ip_addr"
+    echo "$interface"
+    echo
+}
+
 dns_api_key={{dns_api_key}}
 
 iif=$(/sbin/ip ro show default | awk '/default/{print $5; exit}')
@@ -7,6 +18,15 @@ iip=$(/sbin/ip -o -4 addr show $iif \
     | awk '/inet /{split ($4, a, "/"); print a[1]; exit}')
 hn=$(hostname)
 dns_ip=$(dig +short $hn)
+
+ips=$(/sbin/ip -o -4 addr| awk '/inet /{split($4, a, "/"); print $2, a[1] }')
+echo "$ips" \
+    | while read line; do \
+        i_p=$(echo "$line"| cut -d " " -f 2); \
+        i_f=$(echo "$line"| cut -d " " -f 1); \
+        process_ip "host" "$i_p" "$i_f"; \
+    done
+#exit
 
 echo hostname[$hn] iip[$iip] dns_ip[$dns_ip]
 
